--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link   rel="stylesheet" type="text/css" href="../css/style.css" />
   <title>Lab 1: JSON and localStorage</title>
 </head>
 <body>
   <h1>Lab 1: JSON, Object Constructor, localStorage</h1>
-  <p>Student Name: Your Name</p>
+  <p>Student Name: Sohail Grewal</p>
   <a href="/pages/writer.html">Go to Writer</a>
   <br>
   <a href="/pages/reader.html">Go to Reader</a>
